--- a/README
+++ b/README
@@ -6,4 +6,4 @@ This is a C++ implementation of DSMGA-II. Feel free to use, modify or distribute
 S.-H. Hsu and T.-L. Yu, Optimization by pairwise linkage detection, incremental linkage set, and restricted/back mixing: DSMGA-II, Genetic and Evolutionary Computation Conference (GECCO 2015).
 ==============================================
 
-Ryan
+Ryan & Daniel
